wandb integration with Sagemaker Training Job.

--- a/notebooks/2.sagemaker-training/docker/Dockerfile
+++ b/notebooks/2.sagemaker-training/docker/Dockerfile
@@ -8,4 +8,4 @@ ENV PYTHONUNBUFFERED=TRUE
 ENV PYTHONDONTWRITEBYTECODE=TRUE
 ENV PATH="/opt/ml/code:${PATH}"
 
-WORKDIR /opt/ml/code
+#WORKDIR /opt/ml/code
